<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.incrementaventures.okey.Activities.DoorActivity">

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/open_door_action"
        android:title="@string/open_door"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_lock_open"
        app:showAsAction="always"/>

    <item android:id="@+id/first_config_action"
        android:title="@string/first_configuration_action_bar"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item android:id="@+id/action_new_permission"
        android:title="Add permission"
        android:orderInCategory="5"
        android:icon="@drawable/ic_action_add_circle_outline"
        app:showAsAction="always" />
</menu>
