<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background_menu"
    xmlns:android="http://schemas.android.com/apk/res/android" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.incrementaventures.okey.Fragments.LoginFragment">



    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView2"
        android:src="@drawable/app_icon_placeholder"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:padding="10dp"
        android:adjustViewBounds="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_gravity="center"

        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"
        android:textColor="@color/white"
        android:text="0key"
        android:id="@+id/textView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"
        android:text="@string/email"
        android:id="@+id/textView26"
        android:textColor="@color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textCursorDrawable = "@null"
        android:ems="10"
        android:textColor="@color/white"
        android:id="@+id/login_email"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"
        android:text="@string/password"
        android:id="@+id/textView25" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textCursorDrawable = "@null"
        android:ems="10"
        android:id="@+id/login_password"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password_click_here"
        android:padding="10dp"
        android:layout_gravity="center"
        android:onClick="forgotPasswordClicked"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"
        android:textColor="@color/white"
        android:id="@+id/button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"
        android:textColor="@color/white"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/create_account"
        android:id="@+id/create_account_in_login_button"
        android:textAppearance="@style/TextAppearance.AvenirGreyMedium"/>




</LinearLayout>

</ScrollView>