<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@android:color/white"
        tools:context="com.incrementaventures.okey.Fragments.PreferencesFragment">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/ic_action_menu_gray"
            android:background="@android:color/transparent"
            android:id="@+id/menu_button"
            android:onClick="onMenuItemClicked"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@drawable/ok_icon"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:id="@+id/ok_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/profile_picture"
            android:src="@drawable/no_profile_picture"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/full_name"
            android:id="@+id/textView9"
            android:padding="5dp"
            android:layout_below="@+id/profile_picture"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:ems="10"
            android:id="@+id/user_name"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/email"
            android:padding="5dp"
            android:id="@+id/textView10"
            android:layout_below="@+id/user_name"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:ems="10"
            android:id="@+id/user_email"
            android:layout_below="@+id/textView10"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/password"
            android:padding="5dp"
            android:id="@+id/textView11"
            android:layout_below="@+id/user_email"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/user_password"
            android:layout_below="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/birthday"
            android:padding="5dp"
            android:id="@+id/textView12"
            android:layout_below="@+id/user_password"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:ems="10"
            android:id="@+id/user_birthday"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/gender"
            android:padding="5dp"
            android:id="@+id/textView13"
            android:layout_below="@+id/user_birthday"
            android:layout_alignStart="@+id/user_birthday" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/user_birthday"
            android:layout_alignEnd="@+id/user_birthday"
            android:id="@+id/user_sex_group"
            android:orientation="horizontal"
            android:layout_alignBottom="@+id/textView13">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/user_sex_female"
                android:layout_below="@+id/user_birthday"
                android:layout_alignStart="@+id/user_sex_group"
                android:layout_marginRight="10dp"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/user_sex_male"
                android:checked="true" />
        </RadioGroup>

    </RelativeLayout>
</ScrollView>